using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constants : MonoBehaviour
{
    public const string TAG_BRICK = "Brick";
    public const string ANIM_RUN = "run";
    public const string ANIM_DANCE = "dance";
    public const string ANIM_IDLE = "idle";
    public const string TAG_PLAYER = "Player";
}
